[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamavaq-audit-replay"
version = "0.1.0"
description = "Audit-first deterministic replay of TAMAVAQ/Q-TAMAVAQ neoantigen candidate selection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ioannis Grigoriadis"}]
dependencies = ["numpy>=1.24"]
keywords = ["neoantigen", "audit", "Fubini-Study", "CTQW", "MBHA", "reproducibility"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
tamavaq-replay = "tamavaq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["tamavaq"]
